--- a/CSS/PetrolCSS/petrol.css
+++ b/CSS/PetrolCSS/petrol.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background: radial-gradient(white, #e7e7e7);
+  background: radial-gradient(white, #d6d6d6);
   scroll-behavior: smooth;
 }
 
